--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-cssurlrev",
   "description": "Change asset paths inside css files based on output from grunt-filerev",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "homepage": "https://github.com/richardbolt/grunt-cssurlrev",
   "author": {
     "name": "Richard Bolt",
@@ -39,5 +39,8 @@
   },
   "keywords": [
     "gruntplugin"
-  ]
+  ],
+  "dependencies": {
+    "path": "~0.4.9"
+  }
 }
