Updated peerDependencies for Grunt 1.0 and enaled Node 4 and 5 tests via Travis.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-cssurlrev",
   "description": "Change asset paths inside css files based on output from grunt-filerev, grunt-hashmap, or other similar plugins",
-  "version": "0.2.0",
+  "version": "1.0.0",
   "homepage": "https://github.com/richardbolt/grunt-cssurlrev",
   "author": {
     "name": "Richard Bolt",
@@ -35,7 +35,7 @@
     "grunt": "~0.4.1"
   },
   "peerDependencies": {
-    "grunt": "~0.4.1"
+    "grunt": ">=0.4.1"
   },
   "keywords": [
     "gruntplugin"
