--- a/package.json
+++ b/package.json
@@ -32,10 +32,7 @@
     "grunt-contrib-clean": "~0.4.0",
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-nodeunit": "~0.2.0",
-    "grunt": "~0.4.1"
-  },
-  "peerDependencies": {
-    "grunt": ">=0.4.1"
+    "grunt": "^0.4.5"
   },
   "keywords": [
     "gruntplugin"
